# Redactly

./: .gitignore  CMakeLists.txt  README.md  RELEASE_NOTES.md  THIRD_PARTY_NOTICES.txt  VIDEO_ROADMAP.md
.github/workflows/: ci.yml  release.yml
assets/: faceveil.desktop
docs/: video-detection-improvements.md
include/cloakframe/: Detector.hpp  FaceDetection.hpp  MainWindow.hpp  ModelCatalog.hpp  Mosaic.hpp  ProcessorWorker.hpp  ReviewDialog.hpp  ScrfdFaceDetector.hpp  Tracking.hpp  VideoProcessor.hpp  Yolo5FaceDetector.hpp  YuNetFaceDetector.hpp
include/faceveil/: ImageIo.hpp  MainWindow.hpp  Mosaic.hpp  ProcessorWorker.hpp
include/redactly/: DetectionGeometry.hpp  ImageScanner.hpp  MainWindow.hpp  ModelCatalog.hpp  ModelDownloader.hpp  Mosaic.hpp  ProcessorWorker.hpp  ScrfdFaceDetector.hpp  SettingsDialog.hpp  Theme.hpp  Tracking.hpp  VideoProcessor.hpp
release-notes/: v1.10.1.md  v1.10.3.md
scripts/: check_translations.py  notarize_macos.sh  package_linux.sh  package_macos.sh  package_windows.ps1
src/: CMakeLists.txt  ImageIo.cpp  ImageScanner.cpp  MainWindow.cpp  ModelCatalog.cpp  ModelDownloader.cpp  Mosaic.cpp  ProcessorWorker.cpp  ReviewDialog.cpp  ScrfdFaceDetector.cpp  SettingsDialog.cpp  Theme.cpp  Tracking.cpp  VideoIo.cpp  VideoProcessor.cpp  Yolo5FaceDetector.cpp  YuNetFaceDetector.cpp  main.cpp
tests/: test_core.cpp  test_tracking.cpp  test_video_io.cpp
tools/: inspect_model.cpp  video_detect_stats.cpp
translations/: cloakframe_ja.ts  cloakframe_ko.ts  cloakframe_zh_CN.ts  faceveil_ko.ts  redactly_ko.ts
